change dd style from inline-block to inline so changes on activity page align correctly. fixes #4521.

--- a/web/site/activity.styl
+++ b/web/site/activity.styl
@@ -13,7 +13,6 @@
     margin-right b8
 
   dl > dt, dl > dd
-    display inline-block
     font-size b2
     span.icon
       height 16px
@@ -28,8 +27,10 @@
       
   dt
     text-indent b2
+    display inline-block
 
   dd
+    display inline
     margin-width b8
     & > div > p
       line-height initial
